care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Amount_of_NC_Provider_Discount__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_NC_Provider_Discount__c</fullName>
    <description>SFORCE-2936
Dev - Add fields to Senior Care Companies object</description>
    <inlineHelpText>Please note how much money the client saved as a result of the nursing care center discount</inlineHelpText>
    <label>Amount of NC Provider Discount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>