care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Amount_Private_Pay_funds_required__c.field-meta.xml
<CustomField>
    <fullName>Amount_Private_Pay_funds_required__c</fullName>
    <inlineHelpText>Amount of Private Pay funds required before Medicaid</inlineHelpText>
    <label>Amount of Private Pay funds required</label>
    <length>255</length>
    <type>Text</type>
</CustomField>