care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Any_Specialty_Care__c.field-meta.xml
<CustomField>
    <fullName>Any_Specialty_Care__c</fullName>
    <description>SFORCE-2431
Dev - Add fields to Senior Care Company / Non-Medical Home Care record type</description>
    <label>Any Specialty Care?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>