care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Application_fee__c.field-meta.xml
<CustomField>
    <fullName>Application_fee__c</fullName>
    <label>Application fee</label>
    <length>30</length>
    <type>Text</type>
</CustomField>