care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Are_IL_and_AL_separate__c.field-meta.xml
<CustomField>
    <fullName>Are_IL_and_AL_separate__c</fullName>
    <description>Added for SFORCE-2008</description>
    <label>Are IL and AL separate?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>yes</fullName>
            </value>
            <value>
                <fullName>no</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>