care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Are_your_caregivers_T4__c.field-meta.xml
<CustomField>
    <fullName>Are_your_caregivers_T4__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Added for NMHC Canada</description>
    <inlineHelpText>Are your caregivers T4 (which at the end of the year is submitted to Revenue Canada. This gives the detailed itemization of payroll, taxes submitted, taxable benefits).</inlineHelpText>
    <label>Are your caregivers T4?</label>
    <type>Checkbox</type>
</CustomField>