care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Areas_of_specialization__c.field-meta.xml
<CustomField>
    <fullName>Areas_of_specialization__c</fullName>
    <inlineHelpText>Describe your areas of specialization</inlineHelpText>
    <label>Areas of specialization</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>