care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Articles_of_Incorporation__c.field-meta.xml
<CustomField>
    <fullName>Articles_of_Incorporation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check, if Articles of Incorporation have been received.</description>
    <inlineHelpText>Check, if Articles of Incorporation have been received.</inlineHelpText>
    <label>Articles of Incorporation</label>
    <type>Checkbox</type>
</CustomField>