care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Assistance_with_ADLs__c.field-meta.xml
<CustomField>
    <fullName>Assistance_with_ADLs__c</fullName>
    <label>Assistance with ADLs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incontinence</fullName>
            </value>
            <value>
                <fullName>Toileting</fullName>
            </value>
            <value>
                <fullName>Ambulation</fullName>
            </value>
            <value>
                <fullName>Feeding</fullName>
            </value>
            <value>
                <fullName>Bathing</fullName>
            </value>
            <value>
                <fullName>Dressing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>