care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Att_1_Veterans_Benefits_Accredited__c.field-meta.xml
<CustomField>
    <fullName>Att_1_Veterans_Benefits_Accredited__c</fullName>
    <label>Att.1 Veterans Benefits Accredited?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>