care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Attorney1_Email__c.field-meta.xml
<CustomField>
    <fullName>Attorney1_Email__c</fullName>
    <label>Attorney1 Email</label>
    <type>Email</type>
</CustomField>