care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Attorney1_Name__c.field-meta.xml
<CustomField>
    <fullName>Attorney1_Name__c</fullName>
    <label>Attorney1 Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>