care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Attorney1_Phone__c.field-meta.xml
<CustomField>
    <fullName>Attorney1_Phone__c</fullName>
    <label>Attorney1 Phone</label>
    <type>Phone</type>
</CustomField>