care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Attorney2_Email__c.field-meta.xml
<CustomField>
    <fullName>Attorney2_Email__c</fullName>
    <label>Attorney2 Email</label>
    <type>Email</type>
</CustomField>