care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Attorney2_Phone__c.field-meta.xml
<CustomField>
    <fullName>Attorney2_Phone__c</fullName>
    <label>Attorney2 Phone</label>
    <type>Phone</type>
</CustomField>