care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Attorney2_Title__c.field-meta.xml
<CustomField>
    <fullName>Attorney2_Title__c</fullName>
    <label>Attorney2 Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>