care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Atty_1_Date_of_Discount_Request__c.field-meta.xml
<CustomField>
    <fullName>Atty_1_Date_of_Discount_Request__c</fullName>
    <description>SFORCE-2936
Dev - Add fields to Senior Care Companies object</description>
    <inlineHelpText>Enter the date you requested a discount from Attorney 1</inlineHelpText>
    <label>Atty 1 Date of Discount Request</label>
    <type>Date</type>
</CustomField>