care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Atty_1_Percent_Client_Saved__c.field-meta.xml
<CustomField>
    <fullName>Atty_1_Percent_Client_Saved__c</fullName>
    <description>SFORCE-2936
Dev - Add fields to Senior Care Companies object</description>
    <inlineHelpText>Please note the percentage Attorney 1 agreed to give our clients</inlineHelpText>
    <label>Atty 1 Percent Client Saved</label>
    <length>255</length>
    <type>Text</type>
</CustomField>