care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Atty_2_Amount_of_Provider_Discount__c.field-meta.xml
<CustomField>
    <fullName>Atty_2_Amount_of_Provider_Discount__c</fullName>
    <description>SFORCE-2936
Dev - Add fields to Senior Care Companies object</description>
    <inlineHelpText>Please note how much money the client saved as a result of Attorney 2 discount</inlineHelpText>
    <label>Atty 2 Amount of Provider Discount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>