care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Atty_2_Provider_Agreed_to_Discount__c.field-meta.xml
<CustomField>
    <fullName>Atty_2_Provider_Agreed_to_Discount__c</fullName>
    <description>SFORCE-2936
Dev - Add fields to Senior Care Companies object</description>
    <inlineHelpText>Did Atty 2 Agree to provide a discount?</inlineHelpText>
    <label>Atty 2 Provider Agreed to Discount</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>