care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Atty_2_Provider_Discount_Requested__c.field-meta.xml
<CustomField>
    <fullName>Atty_2_Provider_Discount_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFORCE-2936
Dev - Add fields to Senior Care Companies object</description>
    <inlineHelpText>Did you ask Attorney 2 for a discount?</inlineHelpText>
    <label>Atty 2 Provider Discount Requested</label>
    <type>Checkbox</type>
</CustomField>