care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Auto_Limits__c.field-meta.xml
<CustomField>
    <fullName>Auto_Limits__c</fullName>
    <description>Requested in SFORCE-7634</description>
    <label>Auto Limits</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Insurance_Limits</valueSetName>
    </valueSet>
</CustomField>