care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Automobile_Liability__c.field-meta.xml
<CustomField>
    <fullName>Automobile_Liability__c</fullName>
    <description>Edited for NMHC Canada, SFORCE-1587</description>
    <inlineHelpText>For NMHC Canada: Automobile limit of $1,000,000 (In Canada Cg have 6A coverage on personal vehicles. It allows to carry passengers for business purposes. Some agencies have company vehicles &amp; need riders on their policy).</inlineHelpText>
    <label>Automobile Liability</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>