care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Available_for_emergencies__c.field-meta.xml
<CustomField>
    <fullName>Available_for_emergencies__c</fullName>
    <label>Available for emergencies?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>