care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Average_time_to_fill_care_request__c.field-meta.xml
<CustomField>
    <fullName>Average_time_to_fill_care_request__c</fullName>
    <label>Average time to fill care request</label>
    <type>TextArea</type>
</CustomField>