care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Avg_caseload_of_Care_Managers__c.field-meta.xml
<CustomField>
    <fullName>Avg_caseload_of_Care_Managers__c</fullName>
    <label>Avg. caseload of Care Managers</label>
    <length>100</length>
    <type>Text</type>
</CustomField>