care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Backup_Care_Provider__c.field-meta.xml
<CustomField>
    <fullName>Backup_Care_Provider__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Backup Care Provider</label>
    <type>Checkbox</type>
</CustomField>