care/force-app/main/default/objects/Senior_Care_Companies__c/fields/BBB_Accredited__c.field-meta.xml
<CustomField>
    <fullName>BBB_Accredited__c</fullName>
    <label>BBB Accredited?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>