care/force-app/main/default/objects/Senior_Care_Companies__c/fields/BBB_Listing__c.field-meta.xml
<CustomField>
    <fullName>BBB_Listing__c</fullName>
    <label>BBB Listing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Listing</fullName>
            </value>
            <value>
                <fullName>No Listing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>