care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Beauty_Salon__c.field-meta.xml
<CustomField>
    <fullName>Beauty_Salon__c</fullName>
    <label>xBeauty Salon</label>
    <length>100</length>
    <type>Text</type>
</CustomField>