care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Beds_currently_available__c.field-meta.xml
<CustomField>
    <fullName>Beds_currently_available__c</fullName>
    <label>Beds currently available?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>