care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Beds_length_wait_list__c.field-meta.xml
<CustomField>
    <fullName>Beds_length_wait_list__c</fullName>
    <label>Length of wait list (Beds)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>