care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Behaviors_conditions_cant_accommodate__c.field-meta.xml
<CustomField>
    <fullName>Behaviors_conditions_cant_accommodate__c</fullName>
    <label>Behaviors/conditions cannot accommodate</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Exit-seeking</fullName>
            </value>
            <value>
                <fullName>Verbal or physical agression</fullName>
            </value>
            <value>
                <fullName>Feeding tube</fullName>
            </value>
            <value>
                <fullName>Ventilator</fullName>
            </value>
            <value>
                <fullName>Late stage Alzheimer&apos;s</fullName>
            </value>
            <value>
                <fullName>Two person transfer</fullName>
            </value>
            <value>
                <fullName>Bed bound</fullName>
            </value>
            <value>
                <fullName>Wheelchairs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>