care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Bunker__c.field-meta.xml
<CustomField>
    <fullName>Bunker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bunker</label>
    <type>Checkbox</type>
</CustomField>