care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Cable__c.field-meta.xml
<CustomField>
    <fullName>Cable__c</fullName>
    <label>Cable</label>
    <length>100</length>
    <type>Text</type>
</CustomField>