care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Cancellation_Details__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Details__c</fullName>
    <description>SFORCE-2757
Senior Care Companies</description>
    <label>Cancellation Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>