care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Cancellation_Fee_Cutoff__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Fee_Cutoff__c</fullName>
    <description>SFORCE-2757
Senior Care Companies</description>
    <label>Cancellation Fee Cutoff</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>