care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Cancellation_Fees__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Fees__c</fullName>
    <description>SFORCE-2757
Senior Care Companies</description>
    <label>Cancellation Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>