care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Care_Planning_Provider__c.field-meta.xml
<CustomField>
    <fullName>Care_Planning_Provider__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Care Planning Provider</label>
    <type>Checkbox</type>
</CustomField>