care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Caregivers_are_bonded__c.field-meta.xml
<CustomField>
    <fullName>Caregivers_are_bonded__c</fullName>
    <description>Added for NMHC Canada, SFORCE-1587
(For NMHC Canada: Any incident would be covered under the agency’s General/Crime/Other insurance).</description>
    <inlineHelpText>For NMHC Canada: Are your caregivers bonded? If no, does your agency have Police Vulnerable Sector Screening (PVSC) which provides the screening of individuals who intend on working or volunteering with vulnerable people?</inlineHelpText>
    <label>Caregivers are bonded?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>