care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Caregivers_Bonded__c.field-meta.xml
<CustomField>
    <fullName>Caregivers_Bonded__c</fullName>
    <description>Requested in SFORCE-7634</description>
    <label>Caregivers Bonded</label>
    <length>255</length>
    <type>Text</type>
</CustomField>