care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Caregivers_CPR_certified__c.field-meta.xml
<CustomField>
    <fullName>Caregivers_CPR_certified__c</fullName>
    <label>Caregivers CPR certified?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>