care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Certification_standards_met_for_pers_CGs__c.field-meta.xml
<CustomField>
    <fullName>Certification_standards_met_for_pers_CGs__c</fullName>
    <label>Certification standards met for pers CGs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes: the above standards are met for all workers who provide personal care.</fullName>
            </value>
            <value>
                <fullName>No: the above standards are not met for all workers who provide personal care.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>