care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Certified_GCMs_on_staff__c.field-meta.xml
<CustomField>
    <fullName>Certified_GCMs_on_staff__c</fullName>
    <label>Certified ALCMs on staff?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>