care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Cg_trained_on_abuse_and_neglect__c.field-meta.xml
<CustomField>
    <fullName>Cg_trained_on_abuse_and_neglect__c</fullName>
    <label>Caregivers trained on abuse and neglect?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>