care/force-app/main/default/objects/Senior_Care_Companies__c/fields/CGs_not_bonded_submit_dishonesty_w_COI__c.field-meta.xml
<CustomField>
    <fullName>CGs_not_bonded_submit_dishonesty_w_COI__c</fullName>
    <label>Not bonded;employee dishonesty w/COI</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes - Employee Dishonesty Insurance coverage will be submitted.</fullName>
            </value>
            <value>
                <fullName>No - our agency does not carry this coverage.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>