care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Check_Sexual_Offender_registry__c.field-meta.xml
<CustomField>
    <fullName>Check_Sexual_Offender_registry__c</fullName>
    <label>Check Sexual Offender registry?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>