care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Child_care_for_healthy_mildly_ill_childr__c.field-meta.xml
<CustomField>
    <fullName>Child_care_for_healthy_mildly_ill_childr__c</fullName>
    <description>Child care for healthy/mildly ill children</description>
    <inlineHelpText>Child care for healthy/mildly ill children</inlineHelpText>
    <label>Child care for healthy/mildly ill childr</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>