care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Child_Care_Rates_Weekend__c.field-meta.xml
<CustomField>
    <fullName>Child_Care_Rates_Weekend__c</fullName>
    <label>Child Care Rates: Weekend</label>
    <length>50</length>
    <type>Text</type>
</CustomField>