care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Circumstances_of_lawsuit__c.field-meta.xml
<CustomField>
    <fullName>Circumstances_of_lawsuit__c</fullName>
    <label>If yes, explain circumstances of lawsui</label>
    <length>255</length>
    <type>Text</type>
</CustomField>