care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Clear_Risk_Inform_Score__c.field-meta.xml
<CustomField>
    <fullName>Clear_Risk_Inform_Score__c</fullName>
    <label>Clear Risk Inform Score</label>
    <length>10</length>
    <type>Text</type>
</CustomField>