care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Client_feedback__c.field-meta.xml
<CustomField>
    <fullName>Client_feedback__c</fullName>
    <inlineHelpText>Please enter your Clients feedback here</inlineHelpText>
    <label>Client feedback</label>
    <type>TextArea</type>
</CustomField>