care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Clients_rating_very_good_excellent__c.field-meta.xml
<CustomField>
    <fullName>Clients_rating_very_good_excellent__c</fullName>
    <inlineHelpText>Percentage of clients who rate your services very good to excellent</inlineHelpText>
    <label>Clients % rating very good to excellent</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>&lt; 40%</fullName>
            </value>
            <value>
                <fullName>41 to 60%</fullName>
            </value>
            <value>
                <fullName>61 to 85%</fullName>
            </value>
            <value>
                <fullName>&gt; 85%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>