care/force-app/main/default/objects/Senior_Care_Companies__c/fields/COI_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>COI_Expiration_Date__c</fullName>
    <inlineHelpText>Certificate of Liability Insurance Expiration Date</inlineHelpText>
    <label>COI Expiration Date</label>
    <type>Date</type>
</CustomField>