care/force-app/main/default/objects/Senior_Care_Companies__c/fields/COI_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>COI_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Requested in SFORCE-7634</description>
    <label>COI Uploaded</label>
    <type>Checkbox</type>
</CustomField>