care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>expanded for SFORCE-1884 06/2018</description>
    <inlineHelpText>to be used for BBB and licensing links.</inlineHelpText>
    <label>Comments-Credentialing HC</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>