care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Community_fee__c.field-meta.xml
<CustomField>
    <fullName>Community_fee__c</fullName>
    <label>Community fee</label>
    <length>30</length>
    <type>Text</type>
</CustomField>