care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Community_fee_refundable__c.field-meta.xml
<CustomField>
    <fullName>Community_fee_refundable__c</fullName>
    <label>Is Community fee refundable?</label>
    <length>30</length>
    <type>Text</type>
</CustomField>