care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Community_policy_refunds_transfers__c.field-meta.xml
<CustomField>
    <fullName>Community_policy_refunds_transfers__c</fullName>
    <inlineHelpText>Community&apos;s policy for refunds and transfers</inlineHelpText>
    <label>xCommunity&apos;s policy f. refunds/transfers</label>
    <type>TextArea</type>
</CustomField>