care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Communitys_Primary_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Communitys_Primary_Contacts__c</fullName>
    <description>Added for SFORCE-2008</description>
    <label>Community&apos;s Primary Contacts</label>
    <type>TextArea</type>
</CustomField>