care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Companion_Care_Rates__c.field-meta.xml
<CustomField>
    <fullName>Companion_Care_Rates__c</fullName>
    <label>Companion Care Rates</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>