care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Companion_Care_Rates_Holiday__c.field-meta.xml
<CustomField>
    <fullName>Companion_Care_Rates_Holiday__c</fullName>
    <label>Companion Care Rates: Holiday</label>
    <length>30</length>
    <type>Text</type>
</CustomField>