care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Companion_Care_Rates_Standard__c.field-meta.xml
<CustomField>
    <fullName>Companion_Care_Rates_Standard__c</fullName>
    <label>Companion Care Rates: Standard</label>
    <length>255</length>
    <type>Text</type>
</CustomField>